force-app/main/default/objects/Loyalty_Member__c/Loyalty_Member__c.object-meta.xml
<CustomObject>
    <label>Loyalty Member</label>
    <nameField>
        <displayFormat>LM-{0000}</displayFormat>
        <label>Member Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loyalty Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>