force-app/main/default/objects/Loyalty_Member__c/fields/CLV_Score__c.field-meta.xml
<CustomField>
    <fullName>CLV_Score__c</fullName>
    <label>CLV Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>