force-app/main/default/objects/Loyalty_Member__c/fields/Contact1__c.field-meta.xml
<CustomField>
    <fullName>Contact1__c</fullName>
    <label>Contact1</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Loyalty Members1</relationshipLabel>
    <relationshipName>Loyalty_Members1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>