force-app/main/default/objects/Loyalty_Member__c/fields/Loyalty_Points_Balance__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Points_Balance__c</fullName>
    <label>Loyalty Points Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>