force-app/main/default/objects/Loyalty_Member__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Loyalty Members</relationshipLabel>
    <relationshipName>Loyalty_Members</relationshipName>
    <type>Lookup</type>
</CustomField>