force-app/main/default/objects/Loyalty_Member__c/validationRules/Points_Cannot_Be_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Points_Cannot_Be_Negative</fullName>
    <active>true</active>
    <errorConditionFormula>Loyalty_Points_Balance__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Loyalty_Points_Balance__c</errorDisplayField>
    <errorMessage>Loyalty Points Balance cannot be negative.</errorMessage>
</ValidationRule>