force-app/main/default/objects/Loyalty_Member__c/validationRules/Tier_Required_When_Points.validationRule-meta.xml
<ValidationRule>
    <fullName>Tier_Required_When_Points</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   Loyalty_Points_Balance__c &gt; 0,
   ISBLANK(TEXT(Loyalty_Tier__c))
)</errorConditionFormula>
    <errorDisplayField>Loyalty_Tier__c</errorDisplayField>
    <errorMessage>Loyalty Tier must be selected when points are greater than 0.</errorMessage>
</ValidationRule>